Fix searchbar positioning on small screends

--- a/src/components/Layout/Navbar.module.scss
+++ b/src/components/Layout/Navbar.module.scss
@@ -1,6 +1,8 @@
 @use '../../utils/styles.variables' as styles;
 
 nav {
+  position: fixed;
+  top: 0;
   width: 100%;
 
   background-color: styles.$primaryDarkColor;
@@ -8,6 +10,7 @@ nav {
   .navbar {
     max-width: styles.$contentMaxWidth;
     width: 100%;
+    height: 60px;
     margin: 0 auto;
     padding: 4px 12px;
 
@@ -35,7 +38,10 @@ nav {
         width: 350px;
 
         @media only screen and (max-width: styles.$smallScreenSize) {
-          width: 70vw;
+          position: fixed;
+          top: 68px;
+          left: 5vw;
+          width: 85vw;
         }
       }
     }
